--- a/templates/base.html
+++ b/templates/base.html
@@ -206,7 +206,7 @@
                 >TRICICLOS</a
               >
             </li>
-            {% if user.is_staff %}
+            <!--{% if user.is_staff %} -->
             <li>
               <a
                 href="{% url 'productos:admin_dashboard' %}"
