--- a/templates/base.html
+++ b/templates/base.html
@@ -251,25 +251,13 @@
                 >Inicio</a
               >
             </li>
+            
+            
             <li>
               <a
-                href="{% url 'productos:lista' %}?categoria=1"
+                href="{% url 'productos:lista' %}"
                 class="text-white text-lg uppercase hover:text-red-accent transition-colors duration-300"
-                >MOTOS</a
-              >
-            </li>
-            <li>
-              <a
-                href="{% url 'productos:lista' %}?categoria=3"
-                class="text-white text-lg uppercase hover:text-red-accent transition-colors duration-300"
-                >E-BIKES</a
-              >
-            </li>
-            <li>
-              <a
-                href="{% url 'productos:lista' %}?categoria=2"
-                class="text-white text-lg uppercase hover:text-red-accent transition-colors duration-300"
-                >TRICICLOS</a
+                >Catálogo</a
               >
             </li>
             
